moves all zeros to the end of the array

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,19 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "files.associations": {
+    "__bit_reference": "cpp",
+    "__node_handle": "cpp",
+    "array": "cpp",
+    "memory": "cpp",
+    "ios": "cpp",
+    "istream": "cpp",
+    "optional": "cpp",
+    "sstream": "cpp",
+    "streambuf": "cpp",
+    "string_view": "cpp",
+    "variant": "cpp",
+    "vector": "cpp"
+  }
 }
